--- a/keyworks_analysis.ipynb
+++ b/keyworks_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "docs_info={}\n",
     "with open(r\"pickles/docs_info.pickle\", \"rb\") as f:\n",
-    "    docs_info = pickle.load(f, encoding=\"latin1\")"
+    "    docs_info = pickle.load(f, encoding=\"latin1\")\n",
+    "    \n",
+    "docs={}\n",
+    "with open(r\"pickles/docs.pickle\", \"rb\") as f:\n",
+    "    docs = pickle.load(f, encoding=\"latin1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in docs_info:\n",
+    "    docs_info[key]['full_doc'] = docs[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('docs_info_full.pickle', 'wb') as f:\n",
+    "    pickle.dump(docs_info, f)"
    ]
   },
   {
