working end-to-end model pipeline

--- a/keyworks_analysis.ipynb
+++ b/keyworks_analysis.ipynb
@@ -85,6 +85,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "paperAbstract\n",
+      "title\n",
+      "venue\n",
+      "numCitedBy\n",
+      "numKeyCitations\n",
+      "keyPhrases\n",
+      "numKeyReferences\n",
+      "full_doc\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in docs_info:\n",
+    "    for k in docs_info[key]:\n",
+    "        print (k)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
